--- a/src/app/shoppinglist/details-component/shoppinglist-details.component.scss
+++ b/src/app/shoppinglist/details-component/shoppinglist-details.component.scss
@@ -1,4 +1,3 @@
-
 ::ng-deep .mat-tab-label {
     justify-content: space-around !important;
     min-width: 50% !important;
@@ -8,20 +7,10 @@
       font-size: 36px;
     }
   }
-.mat-tab-group {
-    margin-top: 30px;
-}
-h1 { 
-    margin-bottom: 0px;
-    position: relative;
-    top: 1rem;
-    left: 51%; 
-    transform: translate(-50%)
-}
-.trim {
+.tab-group {
     @media (min-width: 665px) {
         max-width: 600px !important;
     }
     margin:auto !important;
-    position: relative !important;
+    padding-bottom: 3rem !important;
 }
