--- a/src/app/shoppinglist/create-component/shoppinglist-create.component.html
+++ b/src/app/shoppinglist/create-component/shoppinglist-create.component.html
@@ -12,12 +12,16 @@
             <mat-label>Shopping List Name</mat-label>
             <input
               matInput
+              class="caret-color"
               type="text"
               placeholder="Type new shopping list name"
               formControlName="shoppinglistName"
             />
             <mat-error *ngIf="checkError('shoppinglistName', 'required')"
               >Shopping List Name is required</mat-error
+            >
+            <mat-error *ngIf="checkError('shoppinglistName', 'whitespace')"
+              >Please enter valid data</mat-error
             >
             <mat-error *ngIf="checkError('shoppinglistName', 'minlength')"
               >Shopping List Name should be more than 3 characters</mat-error
