refactor: "item component" done

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="width flex justify-content-center">
-  <div class="mt-5 text-center">
+  <div class="pt-5 text-center">
     <h1 class="font-bigger">
       <span> Your shopping list </span>
       <br />
