--- a/src/app/item/item/item.component.html
+++ b/src/app/item/item/item.component.html
@@ -1,9 +1,44 @@
-<div mat-line class="d-flex justify-content-between mt-3">
-    <span class="pt-2"> {{ item.itemName }} </span>
-    <button mat-icon-button (click)="addToBasket(item._id)">
-    <mat-icon
-    [ngStyle]="{'color':isInBasket ? 'lime' : '#FFFFFF'}"
-    >shopping_cart</mat-icon>
+<div mat-line class="item-content">
+  <button
+    mat-icon-button
+    #triggerBtn
+    class="toggle-menu-button"
+    [matMenuTriggerFor]="menu"
+    aria-label="Toggle menu"
+  >
   </button>
+  <mat-menu #menu="matMenu" yPosition="below" class="mat-menu mat-menu-background">
+    <button mat-menu-item>
+      <mat-icon [ngStyle]="{ color: 'orange' }">edit</mat-icon>
+      <span [ngStyle]="{ color: 'khaki'}">Edit {{ item.itemName }}</span>
+    </button>
+    <mat-divider></mat-divider>
+    <button mat-menu-item (click)="itemRemove()">
+      <mat-icon [ngStyle]="{ color: '#ff1f00' }">remove_circle </mat-icon>
+      <span [ngStyle]="{ color: 'khaki' }">Remove {{ item.itemName }}</span>
+    </button>
+  </mat-menu>
+  <div class="item-content width-fill-available">
+    <div matRipple (click)="openMatMenu()" class="item-content width-fill-available">
+      <span mat-button class="item-text">
+        <mat-icon class="menu-icon">more_vert</mat-icon>
+      </span>
+      <span
+        mat-button
+        class="item-text width-fill-available"
+        [innerHTML]="item.itemName | twoRows"
+      ></span>
+    </div>
+    <button
+      class="mr-2"
+      mat-icon-button
+      matRipple
+      (click)="subscribeToBasket(item._id)"
+    >
+      <mat-icon [ngStyle]="{ color: isInBasket() ? 'lime' : '#FFFFFF' }"
+        >shopping_cart</mat-icon
+      >
+    </button>
+  </div>
 </div>
 <mat-divider></mat-divider>
