feat:add favorite icon

--- a/src/app/shoppinglist/dashboard-component/shoppinglist-dashboard.component.scss
+++ b/src/app/shoppinglist/dashboard-component/shoppinglist-dashboard.component.scss
@@ -46,7 +46,7 @@
 
 h1 {
   text-align: center !important;
-  margin-top: 3rem !important;
+  padding-top: 3rem !important;
   font-size: xx-large !important;
   text-shadow: 2px 2px 7px white;
 }
