--- a/src/app/shoppinglist/dashboard-component/shoppinglist-dashboard.component.html
+++ b/src/app/shoppinglist/dashboard-component/shoppinglist-dashboard.component.html
@@ -20,11 +20,12 @@
         <mat-card-title class="card-title">
           {{ shoppinglist.shoppinglistName }}
           <button
-          (click)="onFavoriteClick(shoppinglist._id)"
+          (click)="onFavoriteClick(shoppinglist._id, i, shoppinglist.favorite)"
             mat-icon-button
             class="button-left-corner"
           >
-            <mat-icon class="favorite-icon">star_outline</mat-icon>
+            <mat-icon *ngIf="shoppinglist.favorite" class="favorite-icon">star</mat-icon>
+            <mat-icon *ngIf="!shoppinglist.favorite" class="favorite-icon">star_outline</mat-icon>
           </button>
           <button
             mat-icon-button
@@ -37,15 +38,15 @@
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu" xPosition="before" class="mat-menu mat-menu-background">
-            <button class="edit-button" mat-menu-item (click)="delete(shoppinglist._id, i)">
-              <mat-icon [ngStyle]="{ color: 'orange' }">edit</mat-icon
+            <button class="edit-button" mat-menu-item (click)="edit(shoppinglist._id, shoppinglist.shoppinglistName, i)">
+              <mat-icon [ngStyle]="{ color: '#F9F871' }">edit</mat-icon
               ><span [ngStyle]="{ color: 'khaki' }"
                 >Edit {{ shoppinglist.shoppinglistName }}</span
               >
             </button>
             <mat-divider></mat-divider>
             <button class="delete-button" mat-menu-item (click)="delete(shoppinglist._id, i)">
-              <mat-icon [ngStyle]="{ color: '#ff1f00' }">remove_circle</mat-icon
+              <mat-icon [ngStyle]="{ color: '#C1402D' }">remove_circle</mat-icon
               ><span [ngStyle]="{ color: 'khaki' }"
                 >Remove {{ shoppinglist.shoppinglistName }}</span
               >
