--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,6 +14,7 @@
           (isLogged$ | async) ? ['/shoppinglist/create'] : ['/user/login']
         "
         mat-fab
+        color="primary"
       >
         <mat-icon>add</mat-icon>
       </a>
