--- a/src/app/user/login/login.component.scss
+++ b/src/app/user/login/login.component.scss
@@ -12,8 +12,6 @@
     margin:auto;
     position: relative !important;
 }
-// .checkbox-margin {
-//     margin-right: 5px;
-//     width: 15px;
-//     height: 15px;
-// }
+button.btn-login:hover {
+    background-color: #6200ea;
+}
