style: fix color

--- a/src/app/shared/components/privacy-policy/dialog/privacy-policy-dialog.component.html
+++ b/src/app/shared/components/privacy-policy/dialog/privacy-policy-dialog.component.html
@@ -3,6 +3,6 @@
   <app-privacy-policy-content></app-privacy-policy-content>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button class="btn-cancel" mat-button mat-dialog-close>Cancel</button>
-  <button class="btn-i-agree" mat-button [mat-dialog-close]="true" cdkFocusInitial>I agree</button>
+  <button class="btn-cancel" mat-raised-button mat-dialog-close>Cancel</button>
+  <button class="btn-i-agree" mat-raised-button color="primary" [mat-dialog-close]="true" cdkFocusInitial>I agree</button>
 </mat-dialog-actions>
