--- a/src/app/shared/components/privacy-policy/dialog/privacy-policy-dialog.component.scss
+++ b/src/app/shared/components/privacy-policy/dialog/privacy-policy-dialog.component.scss
@@ -12,10 +12,14 @@
     color: #fff;
   }
   .btn-cancel {
+    background-color: #a8aabc7a;
+    color: #4527a0;
+  }
+  .btn-cancel:hover{
     background-color: #A8AABC;
   }
-  .btn-i-agree {
-    background-color: #007bff;
+  .btn-i-agree:hover {
+    background-color: #6200ea;
   }
 }
 
