feat: add edit name validation

--- a/src/app/shoppinglist/edit-component/shoppinglist-edit.component.html
+++ b/src/app/shoppinglist/edit-component/shoppinglist-edit.component.html
@@ -1,12 +1,39 @@
-<h1 mat-dialog-title>{{data.name}}</h1>
-<div mat-dialog-content>
-  <p>Change your shopping list name</p>
-  <mat-form-field appearance="outline">
-    <mat-label>Shopping List New Name</mat-label>
-    <input matInput [(ngModel)]="data.name">
-  </mat-form-field>
-</div>
-<div mat-dialog-actions>
-  <button mat-stroked-button class="btn-cancel" (click)="onCancelClick()">Cancel</button>
-  <button mat-stroked-button class="btn-ok" [mat-dialog-close]="data" cdkFocusInitial>Ok</button>
-</div>
+<h1 mat-dialog-title>{{ data.name }}</h1>
+<form [formGroup]="formGroup">
+  <div mat-dialog-content>
+    <p>Change your shopping list name</p>
+    <mat-form-field appearance="outline">
+      <mat-label>Shopping List New Name</mat-label>
+      <input 
+      type="text" 
+      matInput 
+      formControlName="shoppinglistName"
+      [(ngModel)]="data.name" />
+      <mat-error *ngIf="checkError('shoppinglistName', ['required'])"
+      >Shopping List Name is required</mat-error
+    >
+    <mat-error *ngIf="checkError('shoppinglistName', ['minlength', 'whitespace'])"
+      >Shopping List Name should be more than {{minLength}} characters</mat-error
+    >
+    <mat-error *ngIf="checkError('shoppinglistName', ['maxlength'])"
+      >Shopping List Name should be less than {{maxLength}} characters</mat-error
+    >
+    </mat-form-field>
+  </div>
+  <div mat-dialog-actions>
+    <button mat-stroked-button class="btn-cancel" (click)="onCancelClick()">
+      Cancel
+    </button>
+    <button
+      mat-stroked-button
+      type="submit"
+      [mat-dialog-close]="data"
+      selected="true"
+      cdkFocusInitial
+      [disabled]="!formGroup.valid"
+      [class.btn-ok]="formGroup.valid"
+    >
+      Ok
+    </button>
+  </div>
+</form>
