--- a/src/app/item/item-list-component/item-list.component.html
+++ b/src/app/item/item-list-component/item-list.component.html
@@ -7,6 +7,7 @@
       [ngStyle]="{ width: '-webkit-fill-available'}"
       [shoppinglistId]="shoppinglist?._id"
       [item]="item"
+      [isOwner]="isOwner"
       (itemChange)="onItemChange($event)"
       (itemRemove)="onItemRemove($event)"
     ></app-item>
