feat: add button hover background-color

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,6 +15,7 @@
         "
         mat-fab
         color="primary"
+        class="add-button"
       >
         <mat-icon>add</mat-icon>
       </a>
