style: change default label color

--- a/src/app/item/item-add-component/item-add.component.html
+++ b/src/app/item/item-add-component/item-add.component.html
@@ -20,7 +20,7 @@
     ></span
     ><span class="mat-button-focus-overlay"></span>
   </button>
-  <mat-form-field class="example-full-width ml-3">
+  <mat-form-field class="add-form-field">
     <mat-label>Add product</mat-label>
     <input matInput type="text" formControlName="itemName" />
     <mat-error *ngIf="checkError('itemName', 'required')"></mat-error>
