--- a/src/app/item/item-add-component/item-add.component.scss
+++ b/src/app/item/item-add-component/item-add.component.scss
@@ -8,12 +8,39 @@
   }
 }
 form {
-  padding-top: 3rem !important;
   padding-left: 1.4rem !important;
+  padding-right: 1.4rem !important;
 }
 
-::ng-deep .warning{
+::ng-deep .add-form-field {
+  margin-left: 1rem;
+  width: calc(100% - 6rem);
+
+  &.ng-untouched {
+    &.mat-focused {
+      .mat-form-field-label {
+        color: #b88fff !important;
+      }
+    }
+  }
+
+  &.ng-touched {
+    &.ng-valid {
+      &.mat-focused {
+        .mat-form-field-label {
+          color: #b88fff !important;
+        }
+      }
+    }
+  }
+}
+
+::ng-deep .warning {
   background: yellow !important;
   color: black !important;
   margin-top: 158px !important;
+  .mat-simple-snackbar{
+    font-size: 22px !important;
+    justify-content: center !important;
+  }
 }
