refactor: remove edit feat, delete from the owner

--- a/src/app/item/item/item.component.scss
+++ b/src/app/item/item/item.component.scss
@@ -13,9 +13,11 @@
     cursor: pointer;
   }
 }
+.item-menu {
+  padding-top: 14px !important;
+}
 .item-text {
   padding-top: 0.7rem !important;
-  padding-left: 0rem !important;
   font-size: 20px;
   font-family: "Verdana", sans-serif;
 }
