--- a/src/app/item/item/item.component.html
+++ b/src/app/item/item/item.component.html
@@ -8,11 +8,6 @@
   >
   </button>
   <mat-menu #menu="matMenu" yPosition="below" class="mat-menu mat-menu-background">
-    <button mat-menu-item>
-      <mat-icon [ngStyle]="{ color: 'orange' }">edit</mat-icon>
-      <span [ngStyle]="{ color: 'khaki'}">Edit {{ item.itemName }}</span>
-    </button>
-    <mat-divider></mat-divider>
     <button mat-menu-item (click)="onItemRemove()">
       <mat-icon [ngStyle]="{ color: '#ff1f00' }">remove_circle </mat-icon>
       <span [ngStyle]="{ color: 'khaki' }">Remove {{ item.itemName }}</span>
@@ -20,12 +15,13 @@
   </mat-menu>
   <div class="item-content width-fill-available">
     <div matRipple (click)="openMatMenu()" class="item-content width-fill-available">
-      <span mat-button class="item-text">
+      <span [hidden]="!isOwner" mat-button class="item-menu">
         <mat-icon class="menu-icon">more_vert</mat-icon>
       </span>
       <span
         mat-button
         class="item-text width-fill-available"
+        [class.is-not-owner]="!isOwner"
         [innerHTML]="item.itemName | twoRows"
       ></span>
     </div>
