--- a/src/app/shoppinglist/create-component/shoppinglist-create.component.scss
+++ b/src/app/shoppinglist/create-component/shoppinglist-create.component.scss
@@ -1,14 +1,23 @@
-::ng-deep .form-field {
-  // mat-input caret color
+::ng-deep .create-form-field {
   .mat-input-element {
     caret-color: aliceblue !important;
   }
-  // field label background gradient
-  .mat-form-field-wrapper {
-    padding-top: 0.6em;
-    padding-left: 0.3em;
-    border-top-left-radius: 5px;
-    background-image: radial-gradient(farthest-side at 23% 19%,#00000085,transparent);
+  &.ng-untouched {
+    &.mat-focused {
+      .mat-form-field-label {
+        color: #b88fff !important;
+      }
+    }
+  }
+
+  &.ng-touched {
+    &.ng-valid {
+      &.mat-focused {
+        .mat-form-field-label {
+          color: #b88fff !important;
+        }
+      }
+    }
   }
 }
 
@@ -19,8 +28,8 @@ button.create:hover {
   background-color: #6200ea!important;
 }
 .btn-create {
-  margin-bottom: 0.8rem !important;
-  height: 48px !important;
+  margin-bottom: 1.2rem !important;
+  height: 49px !important;
 }
 .content {
   min-width: 340px !important;
@@ -33,5 +42,16 @@ button.create:hover {
   text-align: center !important;
   @media (min-width: 599px) {
     text-align: right !important;
+  }
+}
+::ng-deep .create-snack-bar {
+  background: #673ab7 !important;
+  color: white !important;
+  margin-top: 140px !important;
+  border-radius: 15px !important;
+  .mat-simple-snackbar{
+    height: 4rem;
+    font-size: 22px !important;
+    justify-content: center !important;
   }
 }
