feat: add the current user

--- a/src/app/item/item-list-component/item-list.component.html
+++ b/src/app/item/item-list-component/item-list.component.html
@@ -8,6 +8,7 @@
       [shoppinglistId]="shoppinglist?._id"
       [item]="item"
       [isOwner]="isOwner"
+      [currentUser]="currentUser"
       (itemChange)="onItemChange($event)"
       (itemRemove)="onItemRemove($event)"
     ></app-item>
