style: add mat-divider

--- a/src/app/shared/components/info/info.component.html
+++ b/src/app/shared/components/info/info.component.html
@@ -3,6 +3,7 @@
   <h1 mat-dialog-title>{{data.user | titlecase}}</h1>
   <mat-icon class="warning-icon">warning</mat-icon>
 </div>
+<mat-divider></mat-divider>
 <div mat-dialog-content class="content">
   <p>{{data.info}}</p>
 </div>
