--- a/src/app/item/item/item.component.html
+++ b/src/app/item/item/item.component.html
@@ -7,10 +7,10 @@
     aria-label="Toggle menu"
   >
   </button>
-  <mat-menu #menu="matMenu" yPosition="below" class="mat-menu mat-menu-background">
+  <mat-menu #menu yPosition="below" class="mat-menu mat-menu-background">
     <button mat-menu-item (click)="onItemRemove()">
       <mat-icon [ngStyle]="{ color: '#ff1f00' }">remove_circle </mat-icon>
-      <span [ngStyle]="{ color: 'khaki' }">Remove {{ item.itemName }}</span>
+      <span [ngStyle]="{ color: 'khaki' }">Remove {{ item?.itemName }}</span>
     </button>
   </mat-menu>
   <div class="item-content width-fill-available">
@@ -22,7 +22,7 @@
         mat-button
         class="item-text width-fill-available"
         [class.is-not-owner]="!isOwner"
-        [innerHTML]="item.itemName | twoRows"
+        [innerHTML]="item?.itemName | twoRows"
       ></span>
     </div>
     <button
